--- a/Work in lesson/lesson-8/index.html
+++ b/Work in lesson/lesson-8/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,18 +29,18 @@
 
             <h1>Make Your Dogs</h1>
             <p>Look Their Best</p>
-            <button>Free Consultation</button>
+            <button class="button">Free Consultation</button>
             <img src="./img/blackandwhitedog.png" alt="Пес">
 
         </section>
 
-        <section>
+        <section class="section">
 
             <h2>A Few Words About Us</h2>
             <p>SpaDog is a pet salon established in 1999 with the main goal of giving your pets the full furry body treatment so that they can look their very best every day.
 
                 Our salon offers a complete line of fine grooming services to bring out the best of appearance and personality in your pet Our groomers work carefully, never rush, and do not overbook appointments.</p>
-            <button>Learn More</button>   
+            <button class="button">Learn More</button>   
             <img src="./img/golddog.png" alt="Золотийпес">
 
         </section>
@@ -69,7 +70,7 @@
 
         </section>
 
-        <section>
+        <section class="section">
 
             <h2>Services</h2>
             <p>We offer a variety of grooming services for dogs of all breeds and ages. We use only high- quality products that suit the needs of your pet. Discover our most popular services below.</p>
