--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework5</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -96,7 +97,7 @@
         
      </main>
 
-     <footer>
+     <footer class="graycolor">
         <a href="">Web Studio</a>
         <p>м.Київ, пр-т Лесі Українки, 26</p>
         <address>
