--- a/Web Studio/index.html
+++ b/Web Studio/index.html
@@ -41,7 +41,7 @@
             <section>
 
                 <div class="container">
-                    <ul class="">
+                    <ul class="main-section2-ul">
                         <li><h4 class="main-section2-h4">Увага до деталей</h4>
                         <p class="main-section2-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quae, dolor minima autem assumenda facere impedit distinctio expedita culpa. Fugit quibusdam facilis quisquam corporis a, corrupti reprehenderit omnis error iusto?</p></li>
             
@@ -58,7 +58,7 @@
 
                 <div class="container">
                     <h2 class="main-h2">Чим ми займаємося</h2>
-                    <ul>
+                    <ul class="main-section2-ul-photo">
                         <li><img src="./photo/photo_3.png" alt="Фото 3"></li>
                         <li><img src="./photo/photo_2.png" alt="Фото 2"></li>
                         <li><img src="./photo/photo_1.png" alt="Фото 1"></li>
@@ -68,7 +68,7 @@
             <section class="section3">
                 <div class="container">
                     <h2 class="main-h2">Наша команда</h2>
-                    <ul>
+                    <ul class="main-section3-ul">
                         <li>
                             <img src="./photo/Igor.png" alt="Ігор">
                             <h4 class="main-section3-h4">Ігор Дем'яненко</h4>
@@ -104,13 +104,16 @@
     <footer class="gray-color">
         <div class="container">
             <a href="" class="footer-a"><span class="style-web-studio-logo">Web</span>Studio</a>
-            <p class="footer-p">м.Київ, пр-т Лесі Українки, 26</p>
-            <address>
-                <a href="mailto:info@devstudio.com" class="footer-a-style">info@devstudio.com</a>
-                <br>
-                <br>
-                <a href="tel:0961111111" class="footer-a-style"> +38 096 111 11 11</a>
-            </address>
+            
+           <div class="footer-text"> 
+                <p class="footer-p">м.Київ, пр-т Лесі Українки, 26</p>
+                <address>
+                    <a href="mailto:info@devstudio.com" class="footer-a-style">info@devstudio.com</a>
+                    <br>
+                    <br>
+                    <a href="tel:0961111111" class="footer-a-style"> +38 096 111 11 11</a>
+                </address>
+            </div>
         </div>
     </footer>
 
