--- a/Web Studio/index.html
+++ b/Web Studio/index.html
@@ -15,13 +15,13 @@
         
         <a href="" class="header-web-studio-logo"><span class="style-web-studio-logo">Web</span>Studio</a>
 
-        <ul>
+        <ul class="header-ul">
             <li><a href="" class="header-nav-a">Студія</a></li>
             <li><a href="" class="header-nav-a">Портфоліо</a></li>
             <li><a href="" class="header-nav-a">Контакти</a></li>
         </ul>
 
-        <ul>
+        <ul class="header-ul-second">
             <li><a href="" class="header-nav-a">info@devstudio.com</a></li>
             <li><a href="" class="header-nav-a">+38 096 111 11 11</a></li>
         </ul>
@@ -70,28 +70,28 @@
                     <h2 class="main-h2">Наша команда</h2>
                     <ul class="main-section3-ul">
                         <li>
-                            <img src="./photo/Igor.png" alt="Ігор">
+                            <img class="team-member-photo" src="./photo/Igor.png" alt="Ігор">
                             <h4 class="main-section3-h4">Ігор Дем'яненко</h4>
                             <br>
                             <p class="main-section3-p">Product Designer</p>
                         </li>
 
                         <li>
-                            <img src="./photo/Olga.png" alt="Ольга">
+                            <img class="team-member-photo" src="./photo/Olga.png" alt="Ольга">
                             <h4 class="main-section3-h4">Ольга Рєпіна</h4>
                             <br>
                             <p class="main-section3-p">Frontend Developer</p>
                         </li>
 
                         <li>
-                            <img src="./photo/Mykola.png" alt="Микола">
+                            <img class="team-member-photo" src="./photo/Mykola.png" alt="Микола">
                             <h4 class="main-section3-h4">Микола Тарасов</h4>
                             <br>
                             <p class="main-section3-p">Marketing</p>
                         </li>
 
                         <li>
-                            <img src="./photo/Myhailo.png" alt="Михайло">
+                            <img class="team-member-photo" src="./photo/Myhailo.png" alt="Михайло">
                             <h4 class="main-section3-p">Михайло Єрмаков</h4>
                             <br>
                             <p class="main-section3-p">UI Designer</p>
