--- a/Web Studio/index.html
+++ b/Web Studio/index.html
@@ -13,11 +13,11 @@
 
     <header class="container">
         
-        <a href="" class="header-web-studio-logo"><span class="style-web-studio-logo">Web</span>Studio</a>
+        <a href="index.html" class="header-web-studio-logo"><span class="style-web-studio-logo">Web</span>Studio</a>
 
         <ul class="header-ul">
             <li><a href="" class="header-nav-a">Студія</a></li>
-            <li><a href="" class="header-nav-a">Портфоліо</a></li>
+            <li><a href="portfolio.html" class="header-nav-a">Портфоліо</a></li>
             <li><a href="" class="header-nav-a">Контакти</a></li>
         </ul>
 
@@ -57,7 +57,9 @@
                 </div>
 
                 <div class="container">
-                    <h2 class="main-h2">Чим ми займаємося</h2>
+                    <div class="main-h2-display">
+                        <h2 class="main-h2">Чим ми займаємося</h2>
+                    </div>
                     <ul class="main-section2-ul-photo">
                         <li><img src="./photo/photo_3.png" alt="Фото 3"></li>
                         <li><img src="./photo/photo_2.png" alt="Фото 2"></li>
@@ -67,32 +69,34 @@
             </section>
             <section class="section3">
                 <div class="container">
-                    <h2 class="main-h2">Наша команда</h2>
+                    <div class="main-h2-display">
+                        <h2 class="main-h2">Наша команда</h2>
+                    </div>
                     <ul class="main-section3-ul">
-                        <li>
+                        <li class="section3-li">
                             <img class="team-member-photo" src="./photo/Igor.png" alt="Ігор">
                             <h4 class="main-section3-h4">Ігор Дем'яненко</h4>
                             <br>
                             <p class="main-section3-p">Product Designer</p>
                         </li>
 
-                        <li>
+                        <li class="section3-li">
                             <img class="team-member-photo" src="./photo/Olga.png" alt="Ольга">
                             <h4 class="main-section3-h4">Ольга Рєпіна</h4>
                             <br>
                             <p class="main-section3-p">Frontend Developer</p>
                         </li>
 
-                        <li>
+                        <li class="section3-li">
                             <img class="team-member-photo" src="./photo/Mykola.png" alt="Микола">
                             <h4 class="main-section3-h4">Микола Тарасов</h4>
                             <br>
                             <p class="main-section3-p">Marketing</p>
                         </li>
 
-                        <li>
+                        <li class="section3-li">
                             <img class="team-member-photo" src="./photo/Myhailo.png" alt="Михайло">
-                            <h4 class="main-section3-p">Михайло Єрмаков</h4>
+                            <h4 class="main-section3-h4">Михайло Єрмаков</h4>
                             <br>
                             <p class="main-section3-p">UI Designer</p>
                         </li>
