--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -13,7 +13,7 @@
 
     <header class="container">
         
-        <a href="" class="header-web-studio-logo"><span class="style-web-studio-logo">Web</span>Studio</a>
+        <a href="index.html" class="header-web-studio-logo"><span class="style-web-studio-logo">Web</span>Studio</a>
 
         <ul class="header-ul">
             <li><a href="" class="header-nav-a">Студія</a></li>
