--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -101,15 +101,22 @@
      </main>
 
      <footer class="gray-color">
+
         <div class="container">
-            <a href="" class="footer-a"><span class="style-web-studio-logo">Web</span>Studio</a>
-            <p class="footer-p">м.Київ, пр-т Лесі Українки, 26</p>
-            <address>
-                <a href="mailto:info@devstudio.com" class="footer-a-style">info@devstudio.com</a>
-                <br>
-                <br>
-                <a href="tel:0961111111" class="footer-a-style"> +38 096 111 11 11</a>
-            </address>
+            <div class="footer-all-content">
+            <div>
+                <a href="" class="footer-a"><span class="style-web-studio-logo">Web</span>Studio</a>
+            </div>
+           <div class="footer-text"> 
+                <p class="footer-p">м.Київ, пр-т Лесі Українки, 26</p>
+                <address>
+                    <a href="mailto:info@devstudio.com" class="footer-a-style">info@devstudio.com</a>
+                    <br>
+                    <br>
+                    <a href="tel:0961111111" class="footer-a-style"> +38 096 111 11 11</a>
+                </address>
+            </div>
+            </div>
         </div>
     </footer>
 </body>
