--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -32,65 +32,65 @@
         <div class="container">
             <nav>
                 <ul class="main-button">
-                    <li><button class="portfolio-main-button"><a href="" class="a-button-main-text-style">Усі</a></button></li>
-                    <li><button class="portfolio-main-button"><a href=""  class="a-button-main-text-style">Вебсайти</a></button></li>
-                    <li><button class="portfolio-main-button"><a href=""  class="a-button-main-text-style">Додатки</a></button></li>
-                    <li><button class="portfolio-main-button"><a href=""  class="a-button-main-text-style">Дизайн</a></button></li>
-                    <li><button class="portfolio-main-button"><a href=""  class="a-button-main-text-style">Маркетинг</a></button></li>
+                    <li><button class="portfolio-main-button">Усі</button></li>
+                    <li><button class="portfolio-main-button">Вебсайти</button></li>
+                    <li><button class="portfolio-main-button">Додатки</button></li>
+                    <li><button class="portfolio-main-button">Дизайн</button></li>
+                    <li><button class="portfolio-main-button">Маркетинг</button></li>
                 </ul>
             </nav>
 
-            <ul>
+            <ul class="main-ul">
 
-                <li>
+                <li class="item">
                     <img src="./photoall/pc.png" alt="pc">
                     <h2 class="portfolio-main-h2">Технокряк</h2>
                     <p class="portfolio-main-p">Веб-сайт</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/basketball.png" alt="basketball">
                     <h2 class="portfolio-main-h2">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-main-p">Дизайн</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/seafood.png" alt="seafood">
                     <h2 class="portfolio-main-h2">Ресторан Seafood</h2>
                     <p class="portfolio-main-p">Додаток</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/headphones.png" alt="headphones">
                     <h2 class="portfolio-main-h2">Проєкт Prime</h2>
                     <p class="portfolio-main-p">Маркетинг</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/boxes.png" alt="boxes">
                     <h2 class="portfolio-main-h2">Проєкт boxes</h2>
                     <p class="portfolio-main-p">Додаток</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/monitor.png" alt="monitor">
                     <h2 class="portfolio-main-h2">Inspiration has no Borders</h2>
                     <p class="portfolio-main-p">Веб-сайт</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/book.png" alt="book">
                     <h2 class="portfolio-main-h2">Видання Limited Edition</h2>
                     <p class="portfolio-main-p">Дизайн</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/tag.png" alt="tag">
                     <h2 class="portfolio-main-h2">Проєкт LAB</h2>
                     <p class="portfolio-main-p">Маркетинг</p>
                 </li>
 
-                <li>
+                <li class="item">
                     <img src="./photoall/workpc.png" alt="workpc">
                     <h2 class="portfolio-main-h2">Growing Business</h2>
                     <p class="portfolio-main-p">Додаток</p>
