--- a/Web Studio/index.html
+++ b/Web Studio/index.html
@@ -61,9 +61,9 @@
                         <h2 class="main-h2">Чим ми займаємося</h2>
                     </div>
                     <ul class="main-section2-ul-photo">
-                        <li><img src="./photo/photo_3.png" alt="Фото 3"></li>
-                        <li><img src="./photo/photo_2.png" alt="Фото 2"></li>
-                        <li><img src="./photo/photo_1.png" alt="Фото 1"></li>
+                        <li><img src="./photo/photo_3.jpg" alt="Фото-3"></li>
+                        <li><img src="./photo/photo_2.jpg" alt="Фото-2"></li>
+                        <li><img src="./photo/photo_1.jpg" alt="Фото-1"></li>
                     </ul>
                 </div>
             </section>
@@ -74,28 +74,28 @@
                     </div>
                     <ul class="main-section3-ul">
                         <li class="section3-li">
-                            <img class="team-member-photo" src="./photo/Igor.png" alt="Ігор">
+                            <img class="team-member-photo" src="./photo/Igor.jpg" alt="Ігор">
                             <h4 class="main-section3-h4">Ігор Дем'яненко</h4>
                             <br>
                             <p class="main-section3-p">Product Designer</p>
                         </li>
 
                         <li class="section3-li">
-                            <img class="team-member-photo" src="./photo/Olga.png" alt="Ольга">
+                            <img class="team-member-photo" src="./photo/Olga.jpg" alt="Ольга">
                             <h4 class="main-section3-h4">Ольга Рєпіна</h4>
                             <br>
                             <p class="main-section3-p">Frontend Developer</p>
                         </li>
 
                         <li class="section3-li">
-                            <img class="team-member-photo" src="./photo/Mykola.png" alt="Микола">
+                            <img class="team-member-photo" src="./photo/Mykola.jpg" alt="Микола">
                             <h4 class="main-section3-h4">Микола Тарасов</h4>
                             <br>
                             <p class="main-section3-p">Marketing</p>
                         </li>
 
                         <li class="section3-li">
-                            <img class="team-member-photo" src="./photo/Myhailo.png" alt="Михайло">
+                            <img class="team-member-photo" src="./photo/Myhailo.jpg" alt="Михайло">
                             <h4 class="main-section3-h4">Михайло Єрмаков</h4>
                             <br>
                             <p class="main-section3-p">UI Designer</p>
