--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -43,55 +43,55 @@
             <ul class="main-ul">
 
                 <li class="item">
-                    <img src="./photoall/pc.png" alt="pc">
+                    <img src="./photoall/pc.jpg" alt="pc">
                     <h2 class="portfolio-main-h2">Технокряк</h2>
                     <p class="portfolio-main-p">Веб-сайт</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/basketball.png" alt="basketball">
+                    <img src="./photoall/basketball.jpg" alt="basketball">
                     <h2 class="portfolio-main-h2">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-main-p">Дизайн</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/seafood.png" alt="seafood">
+                    <img src="./photoall/seafood.jpg" alt="seafood">
                     <h2 class="portfolio-main-h2">Ресторан Seafood</h2>
                     <p class="portfolio-main-p">Додаток</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/headphones.png" alt="headphones">
+                    <img src="./photoall/headphones.jpg" alt="headphones">
                     <h2 class="portfolio-main-h2">Проєкт Prime</h2>
                     <p class="portfolio-main-p">Маркетинг</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/boxes.png" alt="boxes">
+                    <img src="./photoall/boxes.jpg" alt="boxes">
                     <h2 class="portfolio-main-h2">Проєкт boxes</h2>
                     <p class="portfolio-main-p">Додаток</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/monitor.png" alt="monitor">
+                    <img src="./photoall/monitor.jpg" alt="monitor">
                     <h2 class="portfolio-main-h2">Inspiration has no Borders</h2>
                     <p class="portfolio-main-p">Веб-сайт</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/book.png" alt="book">
+                    <img src="./photoall/book.jpg" alt="book">
                     <h2 class="portfolio-main-h2">Видання Limited Edition</h2>
                     <p class="portfolio-main-p">Дизайн</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/tag.png" alt="tag">
+                    <img src="./photoall/tag.jpg" alt="tag">
                     <h2 class="portfolio-main-h2">Проєкт LAB</h2>
                     <p class="portfolio-main-p">Маркетинг</p>
                 </li>
 
                 <li class="item">
-                    <img src="./photoall/workpc.png" alt="workpc">
+                    <img src="./photoall/workpc.jpg" alt="workpc">
                     <h2 class="portfolio-main-h2">Growing Business</h2>
                     <p class="portfolio-main-p">Додаток</p>
                 </li>
