--- a/Web Studio/index.html
+++ b/Web Studio/index.html
@@ -105,7 +105,7 @@
             </section>
     </main>
 
-    <footer class="gray-color">
+    <footer class="gray-color-footer">
 
         <div class="container">
             <div class="footer-all-content">
