--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -100,7 +100,7 @@
         
      </main>
 
-     <footer class="gray-color">
+     <footer class="gray-color-footer">
 
         <div class="container">
             <div class="footer-all-content">
