--- a/Web Studio/index.html
+++ b/Web Studio/index.html
@@ -86,9 +86,24 @@
                         <h2 class="main-h2">Чим ми займаємося</h2>
                     </div>
                     <ul class="main-section2-ul-photo">
-                        <li><img src="./photo/photo_3.jpg" alt="Фото-3"></li>
-                        <li><img src="./photo/photo_2.jpg" alt="Фото-2"></li>
-                        <li><img src="./photo/photo_1.jpg" alt="Фото-1"></li>
+                        <li>
+                            <img src="./photo/photo_3.jpg" alt="Фото-3">
+                            <div class="image-decoration-div">
+                                <p class="image-decoration">Десктопні додатки</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./photo/photo_2.jpg" alt="Фото-2">
+                            <div class="image-decoration-div">
+                                <p class="image-decoration">Мобільні додатки</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./photo/photo_1.jpg" alt="Фото-1">
+                            <div class="image-decoration-div">
+                                <p class="image-decoration">Дизайнерські рішення</p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
