--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="page-portfolio">
 
     <header class="container header">
         
         <a href="index.html" class="header-web-studio-logo"><span class="style-web-studio-logo">Web</span>Studio</a>
 
         <ul class="header-ul">
-            <li><a href="" class="header-nav-a">Студія</a></li>
+            <li><a href="index.html" class="header-nav-a">Студія</a></li>
             <li><a href="portfolio.html" class="header-nav-a">Портфоліо</a></li>
             <li><a href="" class="header-nav-a">Контакти</a></li>
         </ul>
