--- a/Web Studio/index.html
+++ b/Web Studio/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="symbols.svg">
 </head>
 
-<body>
+<body class="page-home"> 
 
     <header class="container header">
         
         <a href="index.html" class="header-web-studio-logo"><span class="style-web-studio-logo">Web</span>Studio</a>
 
         <ul class="header-ul">
-            <li><a href="" class="header-nav-a">Студія</a></li>
+            <li><a href="index.html" class="header-nav-a">Студія</a></li>
             <li><a href="portfolio.html" class="header-nav-a">Портфоліо</a></li>
             <li><a href="" class="header-nav-a">Контакти</a></li>
         </ul>
