--- a/Web Studio/portfolio.html
+++ b/Web Studio/portfolio.html
@@ -24,7 +24,7 @@
         <ul class="header-ul-second">
 
             <li class="header-li-second">
-                
+
                 <div>
                     <svg class="header-svg" width="16px" height="12px"> 
                         <use href="./symbols.svg#email"></use>
@@ -67,54 +67,111 @@
             <ul class="main-ul">
 
                 <li class="item">
+                       
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/pc.jpg" alt="pc">
                     <h2 class="portfolio-main-h2">Технокряк</h2>
                     <p class="portfolio-main-p">Веб-сайт</p>
                 </li>
 
                 <li class="item">
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/basketball.jpg" alt="basketball">
                     <h2 class="portfolio-main-h2">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-main-p">Дизайн</p>
                 </li>
 
                 <li class="item">
+
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/seafood.jpg" alt="seafood">
                     <h2 class="portfolio-main-h2">Ресторан Seafood</h2>
                     <p class="portfolio-main-p">Додаток</p>
                 </li>
 
                 <li class="item">
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/headphones.jpg" alt="headphones">
                     <h2 class="portfolio-main-h2">Проєкт Prime</h2>
                     <p class="portfolio-main-p">Маркетинг</p>
                 </li>
 
                 <li class="item">
+
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/boxes.jpg" alt="boxes">
                     <h2 class="portfolio-main-h2">Проєкт boxes</h2>
                     <p class="portfolio-main-p">Додаток</p>
                 </li>
 
                 <li class="item">
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/monitor.jpg" alt="monitor">
                     <h2 class="portfolio-main-h2">Inspiration has no Borders</h2>
                     <p class="portfolio-main-p">Веб-сайт</p>
                 </li>
 
                 <li class="item">
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/book.jpg" alt="book">
                     <h2 class="portfolio-main-h2">Видання Limited Edition</h2>
                     <p class="portfolio-main-p">Дизайн</p>
                 </li>
 
                 <li class="item">
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/tag.jpg" alt="tag">
                     <h2 class="portfolio-main-h2">Проєкт LAB</h2>
                     <p class="portfolio-main-p">Маркетинг</p>
                 </li>
 
                 <li class="item">
+                    <div class="overlay-div">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+
                     <img src="./photoall/workpc.jpg" alt="workpc">
                     <h2 class="portfolio-main-h2">Growing Business</h2>
                     <p class="portfolio-main-p">Додаток</p>
